# voiptest

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  IMPLEMENTATION.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  debug-ci.sh  docker-compose.yml  docker-entrypoint.sh  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: negative_404.yaml  smoke_basic.yaml  smoke_matrix.yaml
lab/asterisk/: extensions.conf  pjsip.conf
voiptest/: __init__.py  cli.py  config.py  runner.py
voiptest/engines/: __init__.py  sipp.py
voiptest/engines/sipp_scenarios/: uac_basic.xml
voiptest/report/: junit.py
